modules/gdscript/tests/scripts/parser/errors/static_constructor_returning_something.gd
static func _static_init():
	print("static init")
	return true

func test():
	print("done")
